# uac-bypass-uiaccess

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
injector/: Cargo.toml  build.rs  manifest.xml
injector/src/: enum_process.rs  enum_thread.rs  loader.rs  main.rs
payload/: Cargo.toml
payload/src/: lib.rs
src/: embedded.rs  enum_process.rs  main.rs  process.rs  task_scheduler.rs
